--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
                 // 点击遮罩时，尝试在浏览器中打开指定的URL
                 document.getElementById('mask').onclick = function () {
-                window.location.href = 'http://example.com'; // 替换为你想要在浏览器中打开的网址
+                window.location.href = 'http://dl.xiangkakeji.top'; // 替换为你想要在浏览器中打开的网址
                 };
 </script>
 </body>
