--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>微信遮罩提示</title>
+<title>请在浏览器中打开此链接</title>
 <style>
         body {
                 margin: 0;
@@ -84,24 +84,7 @@
 <link rel="stylesheet" href="css/lrtk.css">
 <SCRIPT language=JavaScript> 
 
-function password() { 
-var testV = 1; 
-var pass1 = prompt('请输入密码:',''); 
-while (testV < 3) { 
-if (!pass1) 
-history.go(-1); 
-if (pass1 == "123456") { 
-break; 
-} 
-testV+=-1; 
-var pass1 = prompt('密码错误!请重新输入:'); 
-} 
-if (pass1!="password" & testV ==3) 
-history.go(-1); 
-return " "; 
-} 
-document.write(password()); 
-</SCRIPT>
+
 </head>
 <body>
 <h1 style="text-align:center;">河南享卡信息科技有限公司合作协议</h1>
