--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 weixinTip.id = 'weixin-tip';
                 
                 var tipImage = document.createElement('img');
-                tipImage.src = 'weixin-tip.png'; // 将此处替换为你实际图片文件的路径
+                tipImage.src = 'image/weixin.png'; // 将此处替换为你实际图片文件的路径
                 
                 var openButton = document.createElement('button');
                 openButton.textContent = '立即跳转';
