--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
         
         #weixin-tip img {
             /* 添加以下样式 */
-            max-width: 80%;
-            margin-top: 20%;
+            width: 150%;
+            height: 150%;
+            object-fit: contain;
         }
     </style>
     
@@ -61,6 +62,12 @@
         协议更新时间：2022.04.06 / 浏览量:
         <span id="busuanzi_value_page_pv"></span>
     </div>
+    <!-- ----------------------------------------------->
+    <div class="bellows single">
+        <!-- 原始内容不变... -->
+    </div>
+</body>
+</html>
  <!-- ----------------------------------------------->
  <div class="bellows single">
   <div class="bellows__item">
