--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background-color: rgba(0, 0, 0, 0.8);
+            background-color: rgba(0, 0, 0, 0.1);/* 将此处的0.5更改为所需的透明度值 */
             z-index: 9999;
             text-align: center;
             
