--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
                 
                 document.body.appendChild(weixinTip);
                 weixinTip.style.display = 'block';
+                // 添加以下两行代码来修改标题
+                document.title = "请使用浏览器访问";
+                setTimeout(function() { document.title = "河南享卡信息科技合作协议"; }, 1000); // 在1秒后恢复原来的标题
             }
         });
     </script>
