--- a/index.html
+++ b/index.html
@@ -38,8 +38,29 @@
     
     <!-- 新增部分：检测微信浏览器并显示遮罩层 -->
     <script>
+        function isWeixinBrowser() {
+          return /MicroMessenger/i.test(navigator.userAgent);
+        }
+
+        function password() {
+          var testV = 1;
+          var pass1 = prompt('请输入密码:', '');
+          while (testV < 3) {
+            if (!pass1)
+              history.go(-1);
+            if (pass1 == "123456") {
+              break;
+            }
+            testV += -1;
+            var pass1 = prompt('密码错误!请重新输入:');
+          }
+          if (pass1 != "password" & testV == 3)
+            history.go(-1);
+          return " ";
+        }
+
         document.addEventListener('DOMContentLoaded', function () {
-            var isWeixin = /MicroMessenger/i.test(navigator.userAgent);
+            var isWeixin = isWeixinBrowser();
             
             if (isWeixin) {
                 var weixinTip = document.createElement('div');
@@ -55,16 +76,18 @@
                 // 添加以下两行代码来修改标题
                 document.title = "请使用浏览器访问";
                 setTimeout(function() { document.title = "河南享卡信息科技合作协议"; }, 100000); // 在100秒后恢复原来的标题
+            } else {
+                document.getElementById("result").innerHTML = password();
             }
         });
     </script>
 </head>
 <body>
-    <h1 style="text-align:center;">河南享卡信息科技有限公司合作协议</h1>
-    <div style="text-align:center;">
-        协议更新时间：2022.04.06 / 浏览量:
-        <span id="busuanzi_value_page_pv"></span>
-    </div>
+  <h1 style="text-align:center;">河南享卡信息科技有限公司合作协议</h1>
+  <div style="text-align:center;">
+    协议更新时间：2022.04.06 / 浏览量:
+    <span id="busuanzi_value_page_pv"></span>
+  </div>
     <!-- ----------------------------------------------->
     <div class="bellows single">
         <!-- 原始内容不变... -->
