--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
         </div>
         <div class="bellows__content">
          公司名称：河南享卡信息科技有限公司
-         <br> 公司地址：河南新乡
+         <br> 公司地址：河南省新乡市
         </div>
        </div>
        <!-- ----------------------------------------------->
