--- a/index.html
+++ b/index.html
@@ -213,5 +213,10 @@
     </div>
    </div>
   </div>
+<!-- 新增部分：备案信息 -->
+  <div class="footer">
+    <p style="text-align:center;">Copyright © 河南享卡信息科技有限公司版权所有</p>
+    <p style="text-align:center;">豫ICP备12345678号-1</p>
+  </div>
 </body>
 </html>
