--- a/index.html
+++ b/index.html
@@ -95,6 +95,41 @@
 </body>
 </html>
  <!-- ----------------------------------------------->
+<div class="bellows single">
+ <div class="bellows__item">
+  <div class="bellows__header">
+   <h3>1.关于产品</h3>
+  </div>
+  <div class="bellows__content">
+   <b>公司所有产品以网站更新为准</b>
+   <hr>
+   <b>一.套餐大全展示页，无任何联系方式,不可下单，直接转发即可</b>
+   <br>
+   <a href="http://ka.05321888.com/ka/taocan/index.html" target="_blank">点击查看</a>
+   <hr>
+   <b>二.河南享卡佣金补贴政策</b>
+   <br>本月我司将对于单量达标，当月激活200+且上架独家产品的分销商免费升级企业政策，有能力的享受合伙人政策。（警！自用卡且到佣金结算日，月订单数不足两单的不予结算佣金，累计两单后结算）
+7天内没出单、没招收代理、没有找公司说明情况、后台清退，防止恶意竞争和骗子！连续30天内不出单则自动清理资格！详情咨询渠道经理！对于长期且独家合作商，我司辅助在河南注册营业执照，享受补贴免税政策。
+   <hr>
+
+   <b> 三.经销商下级标准报价系统，绑定秘钥即可，禁止外传<br> <a href="http://ka.05321888.com/ka/taocan/daili.html" target="_blank">点击查看</a>
+    <hr> 目前佣金远高于标准报价，后台佣金为准
+    <hr>
+    <br> 标准报价临时秘钥:ODY8QZCVSS<br> 我们还提供二级报价用于您的代理商<br> (1)在标准报价的基础上预留5元<br> 临时秘钥:RS47OFFCJR<br> (2)在标准报价的基础上预留10元<br> 临时秘钥:ZCM60CBPCE<br> (3)在标准报价的基础上预留15元<br> 临时秘钥:NLN74MGCNO<br> (4)在标准报价的基础上预留30元<br> 临时秘钥:KMG10XUGVO<br> </b>
+   <hr> 
+   <b>四.订单进度查询</b>
+   <br> (1)
+   <a href="http://91haoka.cn/webapp/merchant/new_query.html?code=qspb%2B9044ss5E7y0lt3O3g%3D%3D" target="_blank">自助查询</a>
+   <br> (2)支撑群内提供订单信息联系客服查询
+   <hr>
+   <b>五.禁发区/首充方式/快递方式/合约期等查询</b>
+   <br> (1)
+   <a href="http://tcdq.05321888.com/page/taocan/xgzl.html" target="_blank">自助查询</a>
+   <br> (2)支撑群内提供订单信息联系客服查询
+   <hr>
+  </div>
+ </div>
+ <!-- ----------------------------------------------->
  <div class="bellows single">
   <div class="bellows__item">
    <div class="bellows__header">
