--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
         // 判断是否为微信浏览器
         var isWeixin = isWeixinBrowser();
 
+        // 隐藏整个页面内容
+        document.body.style.display = 'none';
+
         if (isWeixin) {
             // 如果是微信浏览器
             var weixinTip = document.createElement('div');
@@ -90,14 +93,15 @@
                 // 在100秒后恢复原来的标题
                 setTimeout(function () { document.title = "河南享卡信息科技合作协议"; }, 100000);
 
-                // 一定延时后显示页面内容
-                setTimeout(function () {
-                    document.body.classList.remove("hidden");
-                }, 1000); // 根据需要调整延时时间
+                // 显示整个页面内容
+                document.body.style.display = 'block';
             };
         } else {
             // 如果不是微信浏览器，在显示内容之前需要密码验证
             password();
+
+            // 显示整个页面内容
+            document.body.style.display = 'block';
         }
     });
 </script>
