--- a/index.html
+++ b/index.html
@@ -11,36 +11,33 @@
     <!-- Example Page Styles -->
     <link rel="stylesheet" href="css/lrtk.css">
     
-    <!-- 新增部分：遮罩层CSS样式 -->
-    <style>
-        #weixin-tip {
-            display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background-color: rgba(0, 0, 0, 0.5); /* 设置为半透明 */
-            z-index: 9999;
-            text-align: center;
+   <!-- 新增部分：遮罩层CSS样式 -->
+<style>
+    #weixin-tip {
+        display: none;
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: rgba(0, 0, 0, 1); /* 设置为半透明 */
+        z-index: 9999;
+        text-align: center;
+    }
 
-            /* 删除或注释掉以下一行 */
-            /* padding-top: 15%; */
-        }
+    #weixin-tip img {
+        /* 添加以下样式 */
+        width: 100%;
+        height: auto;
+        max-width: 100%;
+        object-fit: contain;
+    }
 
-        #weixin-tip img {
-            /* 添加以下样式 */
-            width: 100%;
-            height: auto;
-            max-width: 100%;
-            object-fit: contain;
-        }
-
-        /* 新增部分：隐藏页面内容的CSS样式 */
-        .hidden {
-            display: none;
-        }
-    </style>
+    /* 新增部分：隐藏页面内容的CSS样式 */
+    .hidden {
+        display: none;
+    }
+</style>
 
 <!-- 新增部分：检测微信浏览器并显示遮罩层 -->
 <script>
@@ -70,9 +67,6 @@
         // 判断是否为微信浏览器
         var isWeixin = isWeixinBrowser();
 
-        // 隐藏整个页面内容
-        document.body.style.display = 'none';
-
         if (isWeixin) {
             // 如果是微信浏览器
             var weixinTip = document.createElement('div');
@@ -94,22 +88,17 @@
                 setTimeout(function () { document.title = "河南享卡信息科技合作协议"; }, 100000);
 
                 // 显示整个页面内容
-                document.body.style.display = 'block';
+                document.body.classList.remove("hidden");
             };
         } else {
             // 如果不是微信浏览器，在显示内容之前需要密码验证
             password();
 
             // 显示整个页面内容
-            document.body.style.display = 'block';
+            document.body.classList.remove("hidden");
         }
     });
 </script>
-<style>
-    body.hidden {
-        display: none;
-    }
-</style>
 </head>
 
 <body>
