--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       <hr />
 
       <b>
-          三.经销商下级标准报价系统，绑定秘钥即可，禁止外传<br /> <a href="http://ka.05321888.com/ka/taocan/daili.html" target="_blank">点击查看</a>
+          三.经销商下级标准报价系统，绑定秘钥即可，禁止外传<br /> <a href="http://llwkhbj.haoka100.cn" target="_blank">点击查看</a>
           <hr /> 目前佣金远高于标准报价，后台佣金为准
           <br /> 标准报价临时秘钥:ODY8QZCVSS<br /> 我们还提供二级报价用于您的代理商<br /> (1)在标准报价的基础上预留5元<br /> 临时秘钥:RS47OFFCJR<br /> (2)在标准报价的基础上预留10元<br /> 临时秘钥:ZCM60CBPCE<br /> (3)在标准报价的基础上预留15元<br /> 临时秘钥:NLN74MGCNO<br /> (4)在标准报价的基础上预留30元<br /> 临时秘钥:KMG10XUGVO<br />
       </b>
